--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <link rel="icon" type="image/svg+xml" href="https://icons.iconarchive.com/icons/custom-icon-design/flatastic-4/256/Checklist-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo App</title>
+
+    <!-- HTML Meta Tags -->
+    <meta name="description" content="TodoApp">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://creatustareas.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Todo App">
+    <meta property="og:description" content="Aplicación web para organizar tareas">
+    <meta property="og:image" content="https://creatustareas.netlify.app/img/og-img.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="leodevweb.netlify.app">
+    <meta property="twitter:url" content="https://creatustareas.netlify.app/">
+    <meta name="twitter:title" content="Todo App">
+    <meta name="twitter:description" content="Aplicación web para organizar tareas">
+    <meta name="twitter:image" content="https://creatustareas.netlify.app/img/og-img.png">
+
+    <!-- Fonts -->
     <link href="https://api.fontshare.com/v2/css?f[]=pally@500&f[]=author@400&display=swap" rel="stylesheet">
   </head>
   <body class="w-full h-screen">
